# TurtleBot3

./: README.md  imgui.ini
docs/: Will.md
install/: local_setup.sh  setup.sh
install/robot/include/robot/: robot_node.h
install/robot/lib/robot/: gui.py  robot_gui
install/robot/share/ament_index/resource_index/package_run_dependencies/: robot
install/robot/share/robot/: package.sh  package.xml
install/shared_interfaces/include/shared_interfaces/shared_interfaces/msg/: check_log.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
install/shared_interfaces/share/shared_interfaces/: package.sh  package.xml
install/shared_interfaces/share/shared_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_shared_interfaces__rosidl_generator_cExport-noconfig.cmake  export_shared_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_shared_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  shared_interfaces__rosidl_typesupport_cExport.cmake  shared_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  shared_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/shared_interfaces/share/shared_interfaces/msg/: CheckLog.idl  CheckLog.msg  DefectInfo.msg
install/shared_interfaces/share/shared_interfaces/srv/: NavigationMode.srv  RobotType.idl
install/user_interface/include/include/user_interface/: user_interface.hpp  user_interface_backend.hpp
install/user_interface/lib/user_interface/: user_interface_bringup
install/user_interface/share/ament_index/resource_index/package_run_dependencies/: user_interface
install/user_interface/share/ament_index/resource_index/parent_prefix_path/: user_interface
install/user_interface/share/user_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/user_interface/share/user_interface/cmake/: user_interfaceConfig-version.cmake  user_interfaceConfig.cmake
install/user_interface/share/user_interface/environment/: ament_prefix_path.dsv  path.dsv
install/user_interface/share/user_interface/launch/: bringup.launch.py
install/user_interface/share/user_interface/resources/: defect_log.yaml  delivery_log.yaml  map.pgm  map.yaml  pascal_intro.txt  pascal_serial.txt
log/: latest_build
ros2_ws/: defects.yaml  imgui.ini
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/battery/include/battery/: battery_node.h
ros2_ws/install/battery/lib/battery/: battery_node
ros2_ws/install/battery/share/battery/: package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/logger_pkg/share/logger_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/logger_pkg/share/logger_pkg/cmake/: logger_pkgConfig.cmake
ros2_ws/install/manager/include/manager/: base_robot.h  delivery_robot.h  inspection_robot.h  manager_lifecycle_node.h
ros2_ws/install/manager/share/manager/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/manager/share/manager/cmake/: ament_cmake_export_libraries-extras.cmake  managerConfig.cmake
ros2_ws/install/shared_interfaces/share/shared_interfaces/: local_setup.sh  package.bash  package.sh  package.zsh
ros2_ws/install/shared_interfaces/share/shared_interfaces/cmake/: shared_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake
ros2_ws/install/shared_interfaces/share/shared_interfaces/msg/: DefectInfo.idl
ros2_ws/install/user_interface/include/robot/: robot_logic.h
ros2_ws/install/user_interface/share/user_interface/: local_setup.dsv  package.dsv  package.sh
ros2_ws/install/user_interface/share/user_interface/resources/: map.pgm  (+2 more)
ros2_ws/install/warehouse_bringup/share/warehouse_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/defect_detector/: CMakeLists.txt  package.xml
ros2_ws/src/defect_detector/include/defect_detector/: defect.hpp  defect_detection_node.hpp  defect_detector.hpp  defect_filtering.hpp  defect_manager.hpp
ros2_ws/src/defect_detector/launch/: defect_detection_launch.py
ros2_ws/src/defect_detector/src/: defect_detection_node.cpp  defect_detector.cpp  defect_filtering.cpp  defect_manager.cpp
ros2_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/map_manager/: CMakeLists.txt  package.xml
ros2_ws/src/map_manager/config/: nav2_params.yaml
ros2_ws/src/map_manager/include/map_manager/: lifecycle_service_manager.h  map_manager_node.h
ros2_ws/src/map_manager/launch/: sim.launch.py
ros2_ws/src/map_manager/maps/: default.pgm
ros2_ws/src/map_manager/src/: lifecycle_service_manager.cpp  map_manager_node.cpp
ros2_ws/src/map_manager/srv/: SwitchMode.srv
ros2_ws/src/perception/: CMakeLists.txt  package.xml
ros2_ws/src/perception/include/: perception_node.h
ros2_ws/src/perception/src/: perception_node.cpp
ros2_ws/src/shared_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/shared_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/shared_interfaces/install/shared_interfaces/share/shared_interfaces/: package.bash  package.zsh
ros2_ws/src/shared_interfaces/log/: latest_build
ros2_ws/src/shared_interfaces/msg/: AddLog.msg  CheckLog.msg
ros2_ws/src/shared_interfaces/srv/: RobotMode.srv
ros2_ws/src/user_interface/: CMakeLists.txt
ros2_ws/src/user_interface/include/user_interface/: user_interface.hpp
ros2_ws/src/user_interface/resources/: defect_log.yaml  delivery_log.yaml  map.yaml
ros2_ws/src/user_interface/src/: gui.msg  user_interface.cpp  user_interface_bringup.cpp
ros2_ws/src/user_interface/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/user_interface/src/log/: latest_build
ros2_ws/src/warehouse_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/warehouse_bringup/launch/: launch.py
(+121 files in other folders)
