<?xml version="1.0"?>
<package format="3">
  <name>perception_pkg</name>
  <version>0.0.1</version>
  <description>Perception package for processing sensor data and detecting objects.</description>

  <maintainer email="nbro0874@uni.sydney.edu.au">Natalie</maintainer>
<license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend> nav_msgs</depend>
  <depend>shared_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
